2011-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  sfr fixes for accurate cost function.

2011-03-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Code reorganization for a more accurate cost function.

2011-03-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/z80.h,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/main.c:
	  Register allocator option cleanup.

2011-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCmacro.c, src/SDCCmacro.h, src/SDCCutil.c,
	  src/SDCCutil.h: dbuf-ized SDCCmacro.c

2011-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCmacro.c,
	  src/SDCCmacro.h:
	  fixed bug #3152525:
	  sdcc doesn't pass double-quotes from -D option to sdcpp
	* debugger/mcs51/simi.c:
	  call ioctl(sock, FIONBIO, &iMode)
	  replaced with fcntl(sock, F_SETFL, FNONBLOCK | FASYNC) on *nix

2011-03-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asmain.c (main): fixed warning
	* sdas/linksrc/lkaomf51.c (OutputAOEMF51): fixed bug 1630751
	  (ParseRegisters, CollectInfoFromCDB): get address for ascending registers
	* src/cdbFile.c: cosmetics
	* support/regression/fwk/lib/statics.c,
	* support/regression/tests/bug1477149.c: fixed for type float
	* sdas/linksrc/lkaomf51.c: disabled DODUMP

2011-03-18 Borut Razem <borut.razem AT gmail.com>

	* sdas/asxxsrc/asmain.c:
	  reverted incorrect fix for bug #3195019:
	  option -o just instructs sdas to generate an object file,
	  it doesn't take an object output file name as argument
	* sdas/asxxsrc/asmain.c: