@@ -162,6 +162,7 @@ typedef struct iCode
     bitVect *uses;              /* vector of key of used symbols      */
     bitVect *rUsed;             /* registers used by this instruction */
     bitVect *rMask;             /* registers in use during this instruction */
+    bitVect *rSurv;             /* registers that survive this instruction (i.e. they are in use, it is not their last use and they are not in the return) */
     union
       {
         struct
